--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 	include(implementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:${project.mixinextras_version}")))
 
 	// Fabric API
-	include(modImplementation "net.fabricmc.fabric-api:fabric-key-binding-api-v1:1.0.36+fb8d95da77")
-	include(modImplementation "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.2.7+c668f41583")
+	include(modApi "net.fabricmc.fabric-api:fabric-key-binding-api-v1:1.0.36+fb8d95da77")
+	include(modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.2.7+c668f41583")
 }
 
 processResources {
