--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+org.gradle.jvmargs      =-Xmx1G
+org.gradle.parallel     =true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.16.1
-yarn_mappings=1.16.1.build.17
-loader_version=0.14.22
+minecraft_version       =1.16.1
+yarn_mappings           =1.16.1.build.17
+loader_version          =0.14.22
 
 # Mod Properties
-mod_version=1.0.0-alpha.2
-maven_group=org.mcsr
-archives_base_name=speedrunapi
+mod_version             =1.0.0-alpha.2
+maven_group             =org.mcsr
+archives_base_name      =speedrunapi
 
 # Dependencies
-mixinextras_version=0.2.0-rc.4
+mixinextras_version     =0.2.0-rc.4
+fabric_api_version      =0.18.0+build.387-1.16.1
