Fix maven artifact

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,10 @@ jar {
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
+			groupId project.maven_group
+			artifactId project.archives_base_name
+			version project.mod_version
+
 			from components.java
 		}
 	}
