--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,33 @@
+import java.util.regex.Matcher
+import java.util.regex.Pattern
+
 plugins {
 	id 'fabric-loom' version '1.3-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_1_8
+def targetJavaVersion = {
+	Pattern snapshotPattern = Pattern.compile("(?:Snapshot )?(\\d+)w0?(0|[1-9]\\d*)([a-z])")
+	Matcher snapshotMatcher = snapshotPattern.matcher(project.minecraft_version)
+	String[] versionSplit = project.minecraft_version.split("\\.");
+	try {
+		if (versionSplit.length > 1) {
+			if (Integer.parseInt(versionSplit[2]) > 17) return 17
+			if (Integer.parseInt(versionSplit[2]) > 16) return 16
+		} else if (snapshotMatcher.matches()) {
+			int year = Integer.parseInt(snapshotMatcher.group(1))
+			int week = Integer.parseInt(snapshotMatcher.group(2))
+
+			if (year == 21 && week >= 37 || year >= 22) return 17
+			if (year == 20 && week >= 45 || year >= 21) return 16
+		}
+	} finally {
+		return 8
+	}
+}
+
+sourceCompatibility = JavaVersion.toVersion(targetJavaVersion())
+targetCompatibility = JavaVersion.toVersion(targetJavaVersion())
 
 version = "${project.mod_version}+${project.minecraft_version}"
 group = project.maven_group
@@ -45,7 +68,7 @@ processResources {
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
 
-	it.options.release = 8
+	it.options.release = targetJavaVersion()
 }
 
 java {
