fix java.lang.NoClassDefFoundError: net/fabricmc/accesswidener/AccessWidener

--- a/build.gradle
+++ b/build.gradle
@@ -52,8 +52,8 @@ dependencies {
 	include(api(annotationProcessor "com.github.llamalad7.mixinextras:mixinextras-fabric:${project.mixinextras_version}"))
 
 	// Fabric API
-	include(modApi fabricApi.module("fabric-key-binding-api-v1", project.fabric_api_version))
-	include(modApi fabricApi.module("fabric-resource-loader-v0", project.fabric_api_version))
+	include(modImplementation fabricApi.module("fabric-key-binding-api-v1", project.fabric_api_version))
+	include(modImplementation fabricApi.module("fabric-resource-loader-v0", project.fabric_api_version))
 }
 
 processResources {
