--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ maven_group=org.mcsr
 archives_base_name=speedrunapi
 
 # Dependencies
-mixinextras_version=0.2.0-rc.4
+mixinextras=0.2.0-rc.4
+mixinsquared=0.0.2
