--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@ maven_group=org.mcsr
 archives_base_name=speedrunapi
 
 # Dependencies
-mixinextras=0.2.0-rc.4
+mixinextras=0.2.0
 mixinsquared=0.0.2
