--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.16.1.build.17
 loader_version=0.15.7
 
 # Mod Properties
-mod_version=1.0.0-alpha.8
+mod_version=1.0.0-beta.1+1.16.1
 maven_group=org.mcsr
 archives_base_name=speedrunapi
 
