refactor: package rename fixes https://github.com/KingContaria/SpeedrunAPI/issues/11

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.16.0
 
 # Mod Properties
 mod_version=1.2.1+1.16.1
-maven_group=org.mcsr
+maven_group=me.contaria
 archives_base_name=speedrunapi
 
 # Dependencies
