--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.16.1
-yarn_mappings=1.16.1.build.17
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.10
 loader_version=0.16.0
 
 # Mod Properties
