--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,8 @@ yarn_mappings=1.17.1+build.65
 loader_version=0.16.0
 
 # Mod Properties
-mod_version=1.2.1+1.16.1
+mod_version=1.2.1
+target_version=1.16.1
 maven_group=me.contaria
 archives_base_name=speedrunapi
 
