--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.16.0
 
 # Mod Properties
 mod_version=1.2.1
-target_version=1.16.1
+target_version=1.17-1.18.2
 maven_group=me.contaria
 archives_base_name=speedrunapi
 
