--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.65
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.2
 loader_version=0.16.0
 
 # Mod Properties
 mod_version=1.2.1
-target_version=1.17-1.18.2
+target_version=1.19.4
 maven_group=me.contaria
 archives_base_name=speedrunapi
 
