--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.parallel=true
 minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.10
 loader_version=0.16.0
+fabric_api=0.42.0+1.16
 
 # Mod Properties
 mod_version=1.2.1
