--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.parallel=true
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.65
 loader_version=0.16.0
+fabric_api=0.46.1+1.17
 
 # Mod Properties
 mod_version=1.2.1
