--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.parallel=true
 minecraft_version=1.19.4
 yarn_mappings=1.19.4+build.2
 loader_version=0.16.0
+fabric_api=0.87.2+1.19.4
 
 # Mod Properties
 mod_version=1.2.1
