--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.16.1
-yarn_mappings=1.16.1.build.17
+minecraft_version=1.15.2
+yarn_mappings=1.15.2+build.17
 loader_version=0.16.0
+fabric_api=0.28.5+1.15
 
 # Mod Properties
 mod_version=1.2.1
-target_version=1.16.1
+target_version=1.15.2
 maven_group=me.contaria
 archives_base_name=speedrunapi
 
