--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.16.0
 fabric_api=0.46.1+1.17
 
 # Mod Properties
-mod_version=1.2.1
+mod_version=2.0-beta.1
 target_version=1.17-1.18.2
 maven_group=me.contaria
 archives_base_name=speedrunapi
